# replyline

./: .editorconfig  .env.docker.example  .env.keys  .gitattributes  .gitignore  .npmrc  .prettierignore  .rooignore  AGENTS.md  BETA_TESTING.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP-ALPHA.md  SECURITY.md  autopilot-block-1-backend.md  docs-cleanup-task.md  eslint.config.js  index.html  lighthouserc.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  sonar-project.properties  test-out.txt  tsconfig.json  ultimate-ai-stack-2026-2027.md  vite.config.ts
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_log.rs  audio.rs  audio_streaming.rs  candidate_pack.rs  capture_debug.rs  card_v3.rs  commands.rs  context.rs  context_pack.rs  credentials.rs  deepgram.rs  diag_contract.rs  diagnostic_bundle.rs  fs_atomic.rs  interview_card_v1.rs  interview_report.rs  language_profile.rs  lib.rs  llm.rs  main.rs  memory.rs  model_presets.rs  observability.rs  pipeline_timing.rs  privacy.rs  prompt_registry.rs  settings.rs  state.rs  trace_manifest.rs  tray_status.rs  types.rs  ui_strings.rs
src-tauri/src/bilingual/: context_buffer.rs  mod.rs  report.rs  segment_manager.rs  session.rs  translation.rs
src-tauri/src/commands/: bilingual_experimental.rs  bootstrap.rs  capture.rs  context.rs  context_pack.rs  diagnostics.rs  interview.rs  mod.rs  registry.rs  runtime_checks.rs  secrets.rs  settings.rs  shared.rs  tray_window.rs
src-tauri/src/providers/: candidate_pack_provider.rs  deepgram.rs  deepgram_streaming.rs  llm_provider.rs  (+3 more)
(+474 files in other folders)
