[package]
name = "replyline"
version = "0.1.0"
description = "Replyline desktop shell"
authors = ["you"]
edition = "2021"
default-run = "replyline"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "replyline_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
dirs = "6"
url = "2"
keyring = { version = "3.6", features = ["windows-native"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "native-tls", "multipart"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
futures-util = "0.3"
bytes = "1.11.1"
sha2 = "0.10"

[dev-dependencies]
filetime = "0.2"

[target."cfg(windows)".dependencies]
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Media_Audio", "Win32_Storage_FileSystem", "Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_System_Variant"] }
